# ESP32_VL53L0X

./: CMakeLists.txt  README.md  idf_component.yml
api/platform/inc/: vl53l0x_platform.h
api/platform/src/: vl53l0x_platform.c
docs/superpowers/plans/: 2026-06-15-idf-v6-i2c-shared-bus.md
examples/polling/: CMakeLists.txt
inc/: VL53L0X.h
tests/: check_idf_v6_i2c.sh
